tests/compile-errors/ce-closure-type-check.valk

fn main() {
    let x : fn(int)() = fn(x: int) {} 
}
